<resources>
    <string name="app_name">paul_jimenez_prueba01</string>
    <string name="f_nombre">Nombre</string>
    <string name="f_apellido">Apellido</string>
    <string name="f_dividendo">Dividendo</string>
    <string name="f_divisor">Divisor</string>
    <string name="f_parte_entera">Parte Entera</string>
    <string name="f_residuo">Residuo</string>
    <string name="f_numero_invertido">Nùmero Invertido</string>
    <string name="f_btn_siguiente">Siguiente</string>
    <string name="f_btn_mostrar">Mostrar</string>

    <string name="f_text_nombre"></string>
    <string name="f_text_apellido"></string>
    <string name="f_text_dividendo"></string>
    <string name="f_text_divisor"></string>
    <string name="f_text_parte_entera"></string>
    <string name="f_text_residuo"></string>
    <string name="f_text_numero_invertido"></string>
    <string name="f_text_btn_siguiente"></string>
    <string name="f_text_btn_mostrar"></string>

    <string name="s_nombre">Nombre</string>
    <string name="s_apellido">Apellido</string>
    <string name="s_dividendo">Dividendo</string>
    <string name="s_divisor">Divisor</string>
    <string name="s_residuo">Residuo</string>
    <string name="s_numero">Nùmero</string>
    <string name="s_btn_siguiente">Siguiente</string>
    <string name="s_btn_cerrar">Cerrar</string>

    <string name="t_nombre">Nombre</string>
    <string name="t_apellido">Apellido</string>
    <string name="t_dividendo">Dividendo</string>
    <string name="t_divisor">Divisor</string>
    <string name="t_numero">Nùmero</string>
    <string name="t_btn_cerrar">Cerrar</string>

</resources>